--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="drawer_close">Slider Menu Closed</string>
 
     <!--MainMenu-->
+    <string name="lupa_password"><u>Lupa Password</u></string>
     <string name="main_mytransaction">Transaksi Saya</string>
     <string name="main_home">Beranda</string>
     <string name="main_dashboard">Dashboard</string>
